--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "license": "ISC"
 }
