--- a/packages/server/.env
+++ b/packages/server/.env
@@ -3,3 +3,6 @@ POSTGRES_HOST=localhost
 JWT_SECRET=abc123
 JWT_REFRESH_SECRET=123abc
 COOKIE_SECRET=a1b2c3
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres_password
