--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
@@ -33,6 +34,7 @@
     "@storybook/nextjs": "^7.0.17",
     "@storybook/react": "^7.0.17",
     "@storybook/testing-library": "^0.1.0",
+    "@svgr/webpack": "^8.0.1",
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.23",
