--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.0",
@@ -49,6 +50,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
