--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^8.0.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
@@ -41,6 +42,7 @@
     "@storybook/react": "^7.0.17",
     "@storybook/testing-library": "^0.1.0",
     "@svgr/webpack": "^8.0.1",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "eslint-plugin-storybook": "^0.6.12",
     "postcss": "^8.4.23",
